tests/neg/i7810.scala
val a = implicitly[ValueOf[?]] // error
